--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "1.3.0",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.1",
     "redux-logger": "^3.0.6"
   },
   "devDependencies": {
@@ -34,6 +35,7 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "@types/react-router-dom": "^5.1.8",
     "@types/redux-logger": "^3.0.9",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
