--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
     "axios": "^0.21.3",
     "bootstrap": "4.5.2",
     "font-awesome": "^4.7.0",
+    "graphql": "^15.5.3",
+    "graphql-request": "^3.5.0",
     "react": "^17.0.1",
     "react-bootstrap": "1.3.0",
     "react-dom": "^17.0.1",
+    "react-query": "^3.21.1",
+    "react-query-devtools": "^2.6.3",
     "react-router-dom": "^5.2.1",
     "redux-logger": "^3.0.6"
   },
